--- a/exercises/ch-03/compact_self_attention.ipynb
+++ b/exercises/ch-03/compact_self_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "3d656207-c8b8-4daa-9f7d-192496852e24",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "2e2a97ba-d736-48e3-afa4-ac7881df6dc8",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1b188f46-edd1-4936-b0e5-8999c22b79e2",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6113d7b3",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "030f88be",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "29669045",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "f2e3d638",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "fcda5570",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "d644a05b",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "2c15a1cc",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "7ed21c9c",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "f9d64917",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "704781fc",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "7331f3c4",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "d9f67806",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "bf6e17b4",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "8882d92f",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "a61ff186",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "8b0a9609",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "0cd7074c",
    "metadata": {},
    "outputs": [],
@@ -602,6 +602,10 @@
     "        )\n",
     "    def forward(self, x):\n",
     "        print(self.W_key)\n",
+    "        print(x.shape)\n",
+    "\n",
+    "\n",
+    "\n",
     "        b, num_tokens, d_in = x.shape\n",
     "        keys = self.W_key(x)\n",
     "        queries = self.W_query(x)\n",
@@ -636,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "f0a3da11",
    "metadata": {},
    "outputs": [
@@ -644,28 +648,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear(in_features=3, out_features=2, bias=False)\n"
+      "Linear(in_features=3, out_features=2, bias=False)\n",
+      "torch.Size([2, 6, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.1788, -0.6077],\n",
-       "         [-0.2099, -0.6397],\n",
-       "         [-0.2199, -0.6547],\n",
-       "         [-0.1932, -0.6522],\n",
-       "         [-0.1752, -0.6609],\n",
-       "         [-0.1716, -0.6540]],\n",
+       "tensor([[[0.5223, 0.3152],\n",
+       "         [0.5686, 0.2632],\n",
+       "         [0.5801, 0.2491],\n",
+       "         [0.5547, 0.2724],\n",
+       "         [0.5054, 0.3181],\n",
+       "         [0.5239, 0.2992]],\n",
        "\n",
-       "        [[-0.1788, -0.6077],\n",
-       "         [-0.2099, -0.6397],\n",
-       "         [-0.2199, -0.6547],\n",
-       "         [-0.1932, -0.6522],\n",
-       "         [-0.1752, -0.6609],\n",
-       "         [-0.1716, -0.6540]]], grad_fn=<ViewBackward0>)"
+       "        [[0.5223, 0.3152],\n",
+       "         [0.5686, 0.2632],\n",
+       "         [0.5801, 0.2491],\n",
+       "         [0.5547, 0.2724],\n",
+       "         [0.5054, 0.3181],\n",
+       "         [0.5239, 0.2992]]], grad_fn=<ViewBackward0>)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
