ch05: load data and calc loss

--- a/exercises/ch-05/pretraining.ipynb
+++ b/exercises/ch-05/pretraining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        ")"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -502,6 +502,207 @@
     "# the result of this 'loss' is the same as neg_avg_log_probas\n",
     "loss = torch.nn.functional.cross_entropy(logits_flat, targets_flat)\n",
     "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = \"the-verdict.txt\"\n",
+    "with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "    text_data = file.read()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Characters:  20479\n",
+      "Tokens:  5145\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_characters = len(text_data)\n",
+    "total_tokens = len(tokenizer.encode(text_data))\n",
+    "print(\"Characters: \", total_characters)\n",
+    "print(\"Tokens: \", total_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18431\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ratio = 0.9\n",
+    "split_idx = int(train_ratio * total_characters)\n",
+    "train_data = text_data[:split_idx]\n",
+    "val_data = text_data[split_idx:]\n",
+    "\n",
+    "print(split_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len 18\n",
+      "len 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataloader import create_dataloader_v1\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "\n",
+    "train_loader = create_dataloader_v1(\n",
+    "    train_data,\n",
+    "    batch_size=2,\n",
+    "    max_length=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    stride=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    drop_last=True,\n",
+    "    shuffle=True,\n",
+    "    num_workers=0\n",
+    ")\n",
+    "val_loader = create_dataloader_v1(\n",
+    "    val_data,\n",
+    "    batch_size=2,\n",
+    "    max_length=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    stride=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    drop_last=True,\n",
+    "    shuffle=True,\n",
+    "    num_workers=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loader:\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "Validation loader:\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train loader:\")\n",
+    "for x,y in train_loader:\n",
+    "    print(x.shape, y.shape)\n",
+    "\n",
+    "print(\"Validation loader:\")\n",
+    "for x,y in val_loader:\n",
+    "    print(x.shape, y.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_loss_batch(input_batch, target_batch, model, device):\n",
+    "    input_batch = input_batch.to(device) # this device allows us to transfer the data to a GPU\n",
+    "    target_batch = target_batch.to(device)\n",
+    "    logits = model(input_batch)\n",
+    "    loss = torch.nn.functional.cross_entropy(\n",
+    "        logits.flatten(0, 1), target_batch.flatten()\n",
+    "    )\n",
+    "    return loss\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_loss_loader(data_loader, model, device, num_batches=None):\n",
+    "    total_loss = 0\n",
+    "    if len(data_loader) == 0:\n",
+    "        return float(\"nan\")\n",
+    "    elif num_batches is None:\n",
+    "        num_batches = len(data_loader)\n",
+    "    else:\n",
+    "        num_batches = min(num_batches, len(data_loader))\n",
+    "    for i, (input_batch, target_batch) in enumerate(data_loader):\n",
+    "        if i < num_batches:\n",
+    "            loss = calc_loss_batch(\n",
+    "                input_batch, target_batch, model, device\n",
+    "            )\n",
+    "            total_loss += loss.item()\n",
+    "        else:\n",
+    "            break\n",
+    "    return total_loss / num_batches # calculate the average loss over all batches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 10.989001803927952\n",
+      "Validation loss: 10.975936889648438\n"
+     ]
+    }
+   ],
+   "source": [
+    "DEFAULT_DEVICE = \"cpu\"\n",
+    "if torch.cuda.is_available():\n",
+    "    DEFAULT_DEVICE = \"cuda\"\n",
+    "elif torch.mps.is_available():\n",
+    "    DEFAULT_DEVICE = \"mps\"\n",
+    "\n",
+    "model = model.to(DEFAULT_DEVICE)\n",
+    "with torch.no_grad():\n",
+    "    train_loss = calc_loss_loader(train_loader, model, DEFAULT_DEVICE)\n",
+    "    val_loss = calc_loss_loader(val_loader, model, DEFAULT_DEVICE)\n",
+    "\n",
+    "print(\"Training loss:\", train_loss)\n",
+    "print(\"Validation loss:\", val_loss)\n",
+    "    "
    ]
   },
   {
