ch05: training model

--- a/exercises/ch-05/pretraining.ipynb
+++ b/exercises/ch-05/pretraining.ipynb
@@ -707,6 +707,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model_simple(model, train_loader, val_loader, optimizer, device, num_epochs, eval_freq, eval_iter, start_context, tokenizer):\n",
+    "    train_losses, val_losses, track_tokens_seen = [], [], []\n",
+    "    tokens_seen, global_step = 0, -1\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train() # set the model to training mode\n",
+    "        for input_batch, target_batch in train_loader:\n",
+    "            optimizer.zero_grad() # reset gradients from previous batch iteration\n",
+    "            loss = calc_loss_batch(\n",
+    "                input_batch, target_batch, model, device\n",
+    "            )\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            tokens_seen += input_batch.numel()\n",
+    "            global_step += 1\n",
+    "\n",
+    "            if global_step % eval_freq == 0:\n",
+    "                train_loss, val_loss = evaluate_model(\n",
+    "                    model, train_loader, val_loader, device, eval_iter\n",
+    "                )\n",
+    "                train_losses.append(train_loss)\n",
+    "                val_losses.append(val_loss)\n",
+    "                track_tokens_seen.append(tokens_seen)\n",
+    "                print(f\"Ep {epoch+1} (Step {global_step:06d}):\"\n",
+    "                      f\"Train loss {train_loss:.3f},\"\n",
+    "                      f\"Val loss {val_loss:.3f}\")\n",
+    "        generate_and_print_sample(\n",
+    "            model, tokenizer, device, start_context\n",
+    "        )\n",
+    "    return train_losses, val_losses, track_tokens_seen\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(model, train_loader, val_loader, device, eval_iter):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        train_loss = calc_loss_loader(\n",
+    "            train_loader, model, device, num_batches=eval_iter\n",
+    "        )\n",
+    "        val_loss = calc_loss_loader(\n",
+    "            val_loader, model, device, num_batches=eval_iter\n",
+    "        )\n",
+    "    model.train()\n",
+    "    return train_loss, val_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_and_print_sample(model, tokenizer, device, start_context):\n",
+    "    model.eval()\n",
+    "    context_size = model.pos_emb.weight.shape[0]\n",
+    "    encoded = text_to_token_ids(start_context, tokenizer).to(device)\n",
+    "    with torch.no_grad():\n",
+    "        token_ids = generate_text_simple(\n",
+    "            model, idx=encoded,\n",
+    "            max_new_tokens=50, context_size=context_size\n",
+    "        )\n",
+    "    decoded_text = token_ids_to_text(token_ids, tokenizer)\n",
+    "    print(decoded_text.replace(\"\\n\", \" \"))\n",
+    "    model.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ep 1 (Step 000000):Train loss 10.838,Val loss 10.863\n",
+      "Ep 1 (Step 000005):Train loss 9.860,Val loss 10.021\n",
+      "Every effort moves you let\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\" out\"\"\" out\"\"\" been\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\" out Jack Jackburn it\"\"\n",
+      "Ep 2 (Step 000010):Train loss 8.961,Val loss 9.171\n",
+      "Ep 2 (Step 000015):Train loss 8.021,Val loss 8.311\n",
+      "Every effort moves you\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+      "Ep 3 (Step 000020):Train loss 7.244,Val loss 7.596\n",
+      "Ep 3 (Step 000025):Train loss 6.628,Val loss 7.077\n",
+      "Every effort moves you of\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\" of\"\"\"\"\n",
+      "Ep 4 (Step 000030):Train loss 6.221,Val loss 6.779\n",
+      "Ep 4 (Step 000035):Train loss 6.034,Val loss 6.682\n",
+      "Every effort moves you,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+      "Ep 5 (Step 000040):Train loss 6.058,Val loss 6.695\n",
+      "Every effort moves you..................................................\n",
+      "Ep 6 (Step 000045):Train loss 6.038,Val loss 6.715\n",
+      "Ep 6 (Step 000050):Train loss 6.056,Val loss 6.726\n",
+      "Every effort moves you,                                                 \n",
+      "Ep 7 (Step 000055):Train loss 6.021,Val loss 6.743\n",
+      "Ep 7 (Step 000060):Train loss 5.969,Val loss 6.760\n",
+      "Every effort moves you,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+      "Ep 8 (Step 000065):Train loss 6.012,Val loss 6.776\n",
+      "Ep 8 (Step 000070):Train loss 5.993,Val loss 6.798\n",
+      "Every effort moves you,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+      "Ep 9 (Step 000075):Train loss 5.984,Val loss 6.802\n",
+      "Ep 9 (Step 000080):Train loss 6.039,Val loss 6.796\n",
+      "Every effort moves you,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+      "Ep 10 (Step 000085):Train loss 6.015,Val loss 6.806\n",
+      "Every effort moves you,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "model = GPTModel(GPT_CONFIG_124M)\n",
+    "model.to(DEFAULT_DEVICE)\n",
+    "optimizer = torch.optim.AdamW(\n",
+    "    model.parameters(),\n",
+    "    lr=0.0004, weight_decay=0.1\n",
+    ")\n",
+    "num_epochs = 10\n",
+    "train_losses, val_losses, tokens_seen = train_model_simple(\n",
+    "    model, train_loader, val_loader, optimizer, DEFAULT_DEVICE,\n",
+    "    num_epochs=num_epochs, eval_freq=5, eval_iter=5,\n",
+    "    start_context=\"Every effort moves you\", tokenizer=tokenizer\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
